# poetry12bug

./: .gitignore  README.md  pyproject.toml
test/inner_project/: pyproject.toml
