[tool.poetry]
name = "inner-project"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"
packages = [{include = "inner_project"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
